--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@
 ul {
   margin: 0;
   padding-left: 0;
+  list-style: none;
 }
 
 a {
@@ -36,6 +37,7 @@ a {
 .nav-left > ul > li, .nav-right > ul > li {
   display: inline-block;
   padding-right: 20px;
+  position: relative;
 }
 
 .nav-left > img {
@@ -51,4 +53,11 @@ a {
 .my_btn {
   background-color: #EB008D;
   border-radius: 40px;
+}
+
+.my_dropdown {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
 }
