--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,10 @@
   height: 100px;
 }
 
+[class*='col'] {
+  height: 100px;
+}
+
 ul {
   margin: 0;
   padding-left: 0;
@@ -34,6 +38,10 @@ a {
   align-items: center;
 }
 
+.nav-right {
+  justify-content: flex-end;
+}
+
 .nav-left > ul > li, .nav-right > ul > li {
   display: inline-block;
   padding-right: 20px;
@@ -44,6 +52,11 @@ a {
   width: 100px;
   vertical-align: middle;
   margin-right: 20px;
+}
+
+.nav-right > ul {
+  display: flex;
+  justify-content: flex-end;
 }
 
 .nav-right select {
@@ -60,4 +73,8 @@ a {
   position: absolute;
   top: 100%;
   left: 0;
+}
+
+.active {
+  display: block;
 }
